# QTLogbook

./: .gitignore  ANALISI_PROBLEMA_VOICEOVER_PERSISTENTE.md  CHANGELOG.md  CMakeLists.txt  DEBUG_IMPORT_ADIF.md  INSTALL.md  LICENSE  QTLogbook.pro  README.md  TEST_ADIF.md  TEST_ADIF_PRATICO.md  TEST_BUGFIX.md  TEST_FIX_RST_FT8.md  TEST_FIX_VOICEOVER.md  TEST_FIX_VOICEOVER_LINGUA.md  TEST_FIX_VOICEOVER_LINGUA_AVANZATO.md  TEST_VERIFICA_FIX.md  VERIFICA_ADIF_INCLUSO.md  build.sh  build_qmake.sh  resources.qrc  test_duplicates.adi  test_import.adi  test_invalid.adi
data/: bands.json  modes.json  rst.json
docs/: Changelog.md  INSTALL.md
src/: adifhandler.cpp  adifhandler.h  apiservice.cpp  apiservice.h  contact.cpp  contact.h  database.cpp  database.h  logbookmodel.cpp  logbookmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  setupdialog.cpp  setupdialog.h
styles/: dark_theme.qss  high_contrast_theme.qss  light_theme.qss  modern_style.qss
